--- a/style.css
+++ b/style.css
@@ -104,6 +104,6 @@ footer {
   max-width: 1000px;
   margin: 20px auto;
   color: #f5ab35;
-  padding: 0 20px;
-  border-top: 1px solid #f5ab35;
+  padding: 10px 20px 0 20px;
+  border-top: 1px solid #ddd;
 }
